# video-splitter

./: .gitignore  LICENSE  QUICKSTART.md  README.md  main.py  pyproject.toml  requirements.txt  test_main.py
.github/: copilot-instructions.md
.specstory/history/: 2025-06-29_18-03Z-я-хочу-создать-скрипт,-который-на-основе-таблицы-в.md
