[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video-splitter"
version = "0.1.0"
description = "Скрипт для нарезки видео на основе таблицы в формате markdown"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "pandas>=2.0.0",
    "click>=8.0.0"
]

[project.scripts]
video-splitter = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=6.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
]
